Ajuste no Github Pages

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Tobaldini - Portfólio</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/root.css">
-    <link rel="stylesheet" href="styles/fonts.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="src/styles/reset.css">
+    <link rel="stylesheet" href="src/styles/root.css">
+    <link rel="stylesheet" href="src/styles/fonts.css">
+    <link rel="stylesheet" href="src/styles/main.css">
+    <link rel="stylesheet" href="src/styles/responsive.css">
 </head>
 <body>
     <nav class="navbar">
@@ -35,7 +35,7 @@
         <section id="home" class="hero">
             <div class="hero-container">
                 <div class="hero-avatar">
-                    <img src="assets/images/profile.jpg" alt="Gabriel Tobaldini" class="avatar-img">
+                    <img src="src/assets/images/profile.jpg" alt="Gabriel Tobaldini" class="avatar-img">
                 </div>
                 <div class="hero-content">
                     <h1 class="hero-title">Gabriel Adami Tobaldini</h1>
@@ -263,6 +263,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="src/scripts/main.js"></script>
 </body>
 </html>
